force-app/main/default/objects/Case/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account_Name__c</field>
            <operation>equals</operation>
            <value>Caelius Consulting</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Enhancements (Assigned To)</relationshipLabel>
    <relationshipName>AssignedResource</relationshipName>
    <type>Lookup</type>
</CustomField>