force-app/main/default/objects/Case/fields/Case_Sub_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Sub_Reason__c</fullName>
    <label>Case Sub Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expired Time</fullName>
            </value>
            <value>
                <fullName>Temperature</fullName>
            </value>
            <value>
                <fullName>Acidity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>