force-app/main/default/objects/Case/fields/CommercientSF__Date_of_Sale__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Date_of_Sale__c</fullName>
    <formula>CommercientSF__Syspro_Serial_Numbers_Invoiced__r.CommercientSF__SorMasterRep__r.CommercientSF__OrderDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of Sale</label>
    <type>Date</type>
</CustomField>