force-app/main/default/objects/Case/fields/CommercientSF__Description_del__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Description_del__c</fullName>
    <formula>CommercientSF__Syspro_Serial_Numbers_Invoiced__r.CommercientSF__SorDetailRep__r.CommercientSF__StockDescription__c</formula>
    <label>Description</label>
    <type>Text</type>
</CustomField>