force-app/main/default/objects/Case/fields/CommercientSF__Product_Code_del__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Product_Code_del__c</fullName>
    <formula>CommercientSF__Syspro_Serial_Numbers_Invoiced__r.CommercientSF__SorDetailRep__r.CommercientSF__StockCode__c</formula>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>