force-app/main/default/objects/Case/fields/CommercientSF__Quantity_del__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Quantity_del__c</fullName>
    <formula>CommercientSF__Syspro_Serial_Numbers_Invoiced__r.CommercientSF__SorDetailRep__r.CommercientSF__OrderQty__c</formula>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>