force-app/main/default/objects/Case/fields/CommercientSF__Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Serial_Number__c</fullName>
    <formula>CommercientSF__Syspro_Serial_Numbers_Invoiced__r.CommercientSF__Serial__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Serial Number</label>
    <type>Text</type>
</CustomField>