force-app/main/default/objects/Case/fields/CommercientSF__Syspro_Serial_Numbers_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Syspro_Serial_Numbers_Invoiced__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Syspro Serial Numbers Invoiced</label>
    <referenceTo>CommercientSF__SorDetailSerRep__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>