force-app/main/default/objects/Case/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <formula>HYPERLINK(
&quot;/&quot; &amp;  Old_Lost_Opportunity__r.Customer__c,
Old_Lost_Opportunity__r.Customer__r.Name,
&quot;_self&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer</label>
    <type>Text</type>
</CustomField>