force-app/main/default/objects/Case/fields/Customer_Market_Price__c.field-meta.xml
<CustomField>
    <fullName>Customer_Market_Price__c</fullName>
    <label>Customer Market Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>