force-app/main/default/objects/Case/fields/Hauler__c.field-meta.xml
<CustomField>
    <fullName>Hauler__c</fullName>
    <formula>HYPERLINK(
&quot;/&quot; &amp;  Old_Lost_Opportunity__r.Hauler__c,
Old_Lost_Opportunity__r.Hauler__r.Name,
&quot;_self&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hauler</label>
    <type>Text</type>
</CustomField>