force-app/main/default/objects/Case/fields/New_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>New_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Cases (New Opportunity)</relationshipLabel>
    <relationshipName>Cases_New_Opp</relationshipName>
    <type>Lookup</type>
</CustomField>