force-app/main/default/objects/Case/fields/Old_Lost_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Old_Lost_Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Old Lost Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>