force-app/main/default/objects/Case/fields/Pricing_Terms__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Terms__c</fullName>
    <label>Pricing Terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>