force-app/main/default/objects/Case/fields/Projected_Loss__c.field-meta.xml
<CustomField>
    <fullName>Projected_Loss__c</fullName>
    <label>Projected Loss</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>