force-app/main/default/objects/Case/fields/Redirect_Hauler_Fees__c.field-meta.xml
<CustomField>
    <fullName>Redirect_Hauler_Fees__c</fullName>
    <label>Redirect Hauler Fees</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>