force-app/main/default/objects/Case/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Enhancement Requested By the Caelius Resource</description>
    <inlineHelpText>Enhancement Requested By the Caelius Resource</inlineHelpText>
    <label>Requested By</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account_Name__c</field>
            <operation>equals</operation>
            <value>Caelius Consulting</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Enhancements</relationshipLabel>
    <relationshipName>RequestedEnhancements</relationshipName>
    <type>Lookup</type>
</CustomField>