force-app/main/default/objects/Case/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <formula>HYPERLINK(
&quot;/&quot; &amp; Old_Lost_Opportunity__r.Supplier__c,
Old_Lost_Opportunity__r.Supplier__r.Name,
&quot;_self&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier</label>
    <type>Text</type>
</CustomField>