force-app/main/default/objects/Case/fields/Supplier_Market_Price__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Market_Price__c</fullName>
    <label>Supplier Market Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>