force-app/main/default/objects/Case/fields/Updated_Purchase_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Updated_Purchase_Multiplier__c</fullName>
    <label>Updated Purchase Multiplier</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>