force-app/main/default/objects/Case/fields/Updated_Resell_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Updated_Resell_Multiplier__c</fullName>
    <label>Updated Resell Multiplier</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>