force-app/main/default/objects/Case/listViews/All_Enhancements.listView-meta.xml
<ListView>
    <fullName>All_Enhancements</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>Assigned_To__c</columns>
    <columns>Requested_By__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <label>All Enhancements</label>
</ListView>